Instant crash with texture plugged into the Displacement output #51412

Closed
opened 2017-05-04 12:36:36 +02:00 by Steffen Dünner · 6 comments

System Information
Win10 1703 x64
GTX 780 3GB

Blender Version
Broken: Latest Buildbot builds and own builds
Worked: Official 2.78c

Short description of error
Blender instantly closes / crashes when plugging a texture (in my case a 16-bit / 8k PNG, but it also crashes with tiny 8-bit JPEGs etc.) into the Displacement output port of a material but only if the "Displacement Method" is "True" or "Both". The strange thing is that in "Supported" mode you don't have access to this option (default is "Bump" I guess) and Blender doesn't crash.
But if you switch to "Experimental", set the "Displacement Method" to something other than "Bump" and then switch back to "Supported" mode (where this option shouldn't have any effect at all) as soon as you connect any image texture to the Displacement output Blender crashes.
Official 2.78c and older Buildbot builds don't crash. I can't tell when it started to crash but it must be since a few days ago.crash_v04.blend

Exact steps for others to reproduce the error

  • Open the attached blend file
  • Connect the image texture to the Displacement output port in the node editor
  • Crash
**System Information** Win10 1703 x64 GTX 780 3GB **Blender Version** Broken: Latest Buildbot builds and own builds Worked: Official 2.78c **Short description of error** Blender instantly closes / crashes when plugging a texture (in my case a 16-bit / 8k PNG, but it also crashes with tiny 8-bit JPEGs etc.) into the Displacement output port of a material ***but only if*** the "Displacement Method" is "True" or "Both". The strange thing is that in "Supported" mode you don't have access to this option (default is "Bump" I guess) and Blender doesn't crash. But if you switch to "Experimental", set the "Displacement Method" to something other than "Bump" and then switch back to "Supported" mode (where this option shouldn't have any effect at all) as soon as you connect any image texture to the Displacement output Blender crashes. Official 2.78c and older Buildbot builds don't crash. I can't tell when it started to crash but it must be since a few days ago.[crash_v04.blend](https://archive.blender.org/developer/F587441/crash_v04.blend) **Exact steps for others to reproduce the error** - Open the attached blend file - Connect the image texture to the Displacement output port in the node editor - Crash

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @SteffenD

Added subscriber: @SteffenD

This issue was referenced by blender/cycles@8a4add89f9

This issue was referenced by blender/cycles@8a4add89f99fb745d519d6c9a0f527ce6a9c2a6e

This issue was referenced by a523dfd2fd

This issue was referenced by a523dfd2fd8c19ca0fbf9891a3be0988945d585f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

You're a wizard! Thanks for this very quick fix!

You're a wizard! Thanks for this very quick fix!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51412
No description provided.